# projectRECALL

./: LICENSE  README.md
BOMs/: FullBOM - Sheet1.csv
firmware/: .gitignore  west.yml
firmware/project_recall/: CMakeLists.txt  Kconfig  pm_static.yml  prj.conf  prj_epd.conf  prj_release.conf  sysbuild.conf
firmware/project_recall/boards/: project_recall.overlay  ssd1680.overlay  ssd1681.overlay
firmware/project_recall/dfu/: gen_keys.sh
firmware/project_recall/src/: app_state.c  app_state.h  main.c
firmware/project_recall/src/audio/: audio_io.c  audio_io.h  chime_data.c  chime_data.h  codec_adpcm.c  codec_adpcm.h  decimator.c  decimator.h
firmware/project_recall/src/ble/: ble_audio_svc.c  ble_audio_svc.h  ble_conn.c  ble_conn.h
firmware/project_recall/src/power/: battery.c  battery.h  charger.c  charger.h  pm.c  pm.h
firmware/project_recall/src/ui/: epd_ui.c  epd_ui.h  led_status.c  led_status.h
firmware/project_recall/src/util/: ringbuf.c  ringbuf.h  task_wdt_mgr.c  task_wdt_mgr.h
firmware/project_recall/sysbuild/: mcuboot.conf
